# lzzzz

./: .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.rs  doc.sh  justfile  rustfmt.toml
.github/workflows/: bench.yml  cargo-publish.yml  rust.yml  system-liblz4.yml
benches/: lorem-ipsum.txt  lz4.rs  lz4_hc.rs  lz4f.rs  lzzzz.rs  my_benchmark.rs
liblz4_test/: main.c
src/: binding.rs  lib.rs  sys.rs
src/api/: mod.rs
src/api/common/: mod.rs
src/api/lz4f/: binding.rs  mod.rs
src/common/: api.rs  binding.rs  buffer.rs  error.rs  mod.rs  report.rs
src/lz4/: api.rs  binding.rs  mod.rs
src/lz4/block/: api.rs  mod.rs
src/lz4/stream/: api.rs  mod.rs
src/lz4_hc/: api.rs  binding.rs  mod.rs
src/lz4_hc/block/: api.rs  mod.rs
src/lz4_hc/stream/: api.rs  mod.rs
src/lz4_hc_stream/: api.rs  binding.rs  mod.rs
src/lz4_stream/: api.rs  binding.rs  mod.rs
src/lz4f/: api.rs  binding.rs  dictionary.rs  error.rs  frame.rs  frame_info.rs  mod.rs  params.rs  preferences.rs
src/lz4f/frame/: api.rs  mod.rs
src/lz4f/stream/: api.rs  mod.rs
src/lz4f/stream/co/: async_bufread.rs  async_read.rs  async_write.rs
src/lz4f/stream/comp/: async_bufread.rs  async_read.rs  async_write.rs  bufread.rs  mod.rs  read.rs  write.rs
src/lz4f/stream/compressor/: async_bufread.rs  async_read.rs  async_write.rs  bufread.rs  mod.rs  read.rs  write.rs
src/lz4f/stream/de/: async_read.rs  async_write.rs  bufread.rs  write.rs
src/lz4f/stream/decomp/: async_bufread.rs  async_read.rs  async_write.rs  bufread.rs  mod.rs  read.rs  write.rs
src/lz4f/stream/decompressor/: async_bufread.rs  async_read.rs  async_write.rs  bufread.rs  mod.rs  read.rs  write.rs
src/lz4f/sys/: binding.rs  mod.rs
src/lz4f_stream/: api.rs  binding.rs  mod.rs
src/lz4hc/: binding.rs  mod.rs
tests/: common.rs  lz4.rs  lz4_hc.rs  lz4_hc_stream.rs  lz4_stream.rs  lz4f.rs  lz4f_async.rs  lz4f_async_stream.rs  lz4f_comp.rs  lz4f_stream.rs
tests/bruteforce/: lz4f.rs  main.rs
tests/common/: mod.rs
tests/fuzzer/: lz4f.rs  lz4f_stream.rs  main.rs
