[package]
name = "lzzzz"
version = "0.4.2"
authors = ["picoHz <picoHz@outlook.com>"]
edition = "2018"
description = "Full-featured liblz4 binding for Rust."
keywords = ["lz4", "lz4f", "lz4-hc", "compression", "decompression"]
categories = ["compression", "api-bindings"]
repository = "https://github.com/picoHz/lzzzz"
homepage = "https://github.com/picoHz/lzzzz"
documentation = "https://docs.rs/lzzzz"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "build.rs", "vendor/liblz4/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
pin-project = { version = "0.4.23", optional = true }
async-std = { version = "1.6.2", optional = true }
futures-lite = { version = "0.1.10", optional = true }

[dev-dependencies]
assert_fs = "1.0.0"
base64 = "0.12.3"
bytes = "0.5.6"
futures = "0.3.5"
lazy_static = "1.4.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rayon = "1.3.1"
static_assertions = "1.1.0"
smol = "0.3.3"
futures-test = "0.3.5"

[build-dependencies]
cc = { version = "1.0.58", features = ["parallel"] }

[features]
async-io = ["async-std", "pin-project", "futures-lite"]
